# swisshydrodata

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: coverage.yaml  lint.yml  publish-to-pypi.yml  run-tests.yml
tests/: test_swisshydrodata.py
