[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "swisshydrodata"
version = "0.2.9"
description = "A library to fetch data from the Swiss federal Office for Environment FEON"
authors = [{ name = "bouni", email = "bouni-github@owee.de" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.32.3"]

[project.urls]
Repository = "https://github.com/Bouni/swisshydrodata"
Documentation = "https://github.com/Bouni/swisshydrodata"
Releases = "https://github.com/Bouni/swisshydrodata/releases"

[tool.maturin]
module-name = "swisshydrodata"
python-source = "python"
